--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Ali ERGÜL" />
     <meta name="title" content="Google ve/veya other browser show in" />
     <meta name="description" content="html5,css3,js,jquery,bootstrap" />
-   <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
 
     <!-- Bootstrap CSS -->
     <link
@@ -82,6 +82,14 @@
                           ><i class="fas fa-newspaper"></i> Haberler</a
                         >
                       </li>
+                      <li class="nav-item">
+                        <a
+                          href="#sss_id"
+                          class="nav-link"
+                        >
+                          <i class="fa fa-battery-full" aria-hidden="true"></i> S.S.S</a
+                        >
+                      </li>
                       <li class="nav-item dropdown">
                         <a
                           class="nav-link dropdown-toggle"
@@ -91,34 +99,42 @@
                           data-bs-toggle="dropdown"
                           aria-expanded="false"
                         >
-                          Dropdown
+                        <i class="fas fa-user-lock"></i>  Login
                         </a>
                         <ul
                           class="dropdown-menu"
                           aria-labelledby="navbarDropdown"
                         >
-                          <li><a class="dropdown-item" href="#">Action</a></li>
                           <li>
-                            <a class="dropdown-item" href="#">Another action</a>
+
+                            <a
+                            data-toggle="modal"
+                            data-target="#register_id"
+                            href="#"
+                            class="nav-link"
+                          >
+                            <i class="fas fa-user-lock text-success"> Register</i> </a
+                          >
+
                           </li>
                           <li><hr class="dropdown-divider" /></li>
                           <li>
-                            <a class="dropdown-item" href="#"
-                              >Something else here</a
+                            <li>
+
+                              <a
+                              data-toggle="modal"
+                              data-target="#login_id"
+                              href="#"
+                              class="nav-link"
                             >
+                              <i class="fas fa-user-lock text-warning">Login</i> </a
+                            >
+  
+                            </li>
                           </li>
                         </ul>
                       </li>
-                      <li class="nav-item">
-                        <a
-                          data-toggle="modal"
-                          data-target="#register_id"
-                          href="#"
-                          class="nav-link"
-                        >
-                          <i class="fas fa-user-lock"></i> Register</a
-                        >
-                      </li>
+                     
                     </ul>
                   </div>
                   <div class="col-md-4">
@@ -142,6 +158,7 @@
       </nav>
     </div>
     <!-- navbar ends -->
+
     <!-- register_id -->
     <div class="modal fade" id="register_id" role="dialog">
       <div class="modal-dialog">
@@ -269,7 +286,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="img/img1.jpg"
+              src="img/town-6818441_1920.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -282,7 +299,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="img/img2.jpg"
+              src="img/mountains-5784153_1920.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -295,7 +312,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="img/img3.jpg"
+              src="img/bicycle-6808140_1920.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -330,9 +347,9 @@
     <!-- header finish -->
 
     <!-- main start -->
-    <main class="container" style="margin-top: 4%">
+    <main class="container" style="margin-top: 8%">
       <!-- urunler -->
-      <section>
+      <section id="product">
         <h3 class="text-center text-uppercase">Ürünler</h3>
         <div class="row">
           <div class="col-md-4">
@@ -549,6 +566,11 @@
           </div>
         </div>
       </section>
+   
+   <section style="margin-top:8%">
+    <h3 class="text-center text-uppercase">S.S.S</h3>
+   </section>
+   
     </main>
     <!-- main finish -->
 
@@ -572,7 +594,7 @@
               </li>
               <li>
                 <i class="fa fa-mobile" aria-hidden="true"
-                  ><a href="tel:+905436168048">+90(543)616-80-48)</a>
+                  ><a href="tel:+905555555">+90 555 55 55</a>
                 </i>
               </li>
             </ul>
